Updated version and small output windows size