@@ -1,39 +1,50 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
+                         https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.anelda</groupId>
     <artifactId>IsakaCountdownTimer</artifactId>
-    <version>0.7-SNAPSHOT</version>
+    <version>1.10-SNAPSHOT</version>
     <name>Wizston - Countdown Timer</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <junit.version>5.8.2</junit.version>
+        <javafx.version>18</javafx.version>
+        <java.version>11</java.version>
+        <javafx.platform>win</javafx.platform>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
+        <javafx.maven.plugin.version>0.0.6</javafx.maven.plugin.version>
+        <maven.shade.plugin.version>3.2.4</maven.shade.plugin.version>
+        <javapackager.version>1.7.2</javapackager.version>
+        <maven.compiler.plugin.version>3.8.1</maven.compiler.plugin.version>
+        <maven.surefire.plugin.version>3.2.5</maven.surefire.plugin.version>
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>org.openjfx</groupId>
-            <artifactId>javafx-controls</artifactId>
-            <version>18</version>
-        </dependency>
-        <dependency>
-            <groupId>org.openjfx</groupId>
-            <artifactId>javafx-fxml</artifactId>
-            <version>18</version>
-        </dependency>
-        <dependency>
-            <groupId>org.openjfx</groupId>
-            <artifactId>javafx-web</artifactId>
-            <version>18</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.openjfx</groupId>-->
+<!--            <artifactId>javafx-controls</artifactId>-->
+<!--            <version>${javafx.version}</version>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>org.openjfx</groupId>-->
+<!--            <artifactId>javafx-fxml</artifactId>-->
+<!--            <version>${javafx.version}</version>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>org.openjfx</groupId>-->
+<!--            <artifactId>javafx-web</artifactId>-->
+<!--            <version>${javafx.version}</version>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>org.controlsfx</groupId>
             <artifactId>controlsfx</artifactId>
-            <version>11.1.1</version>
+            <version>11.1.2</version>
         </dependency>
         <dependency>
             <groupId>com.dlsc.formsfx</groupId>
@@ -95,26 +106,11 @@
             <artifactId>lombok</artifactId>
             <version>1.18.22</version>
         </dependency>
-            <dependency>
-                <groupId>org.xerial</groupId>
-                <artifactId>sqlite-jdbc</artifactId>
-                <version>3.42.0.0</version>
-            </dependency>
-
-        <!-- https://mvnrepository.com/artifact/org.controlsfx/controlsfx -->
         <dependency>
-            <groupId>org.controlsfx</groupId>
-            <artifactId>controlsfx</artifactId>
-            <version>11.1.2</version>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.42.0.0</version>
         </dependency>
-
-        <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-surefire-plugin -->
-        <dependency>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <version>3.2.5</version>
-        </dependency>
-
     </dependencies>
 
     <build>
@@ -122,64 +118,69 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
+                <version>${maven.compiler.plugin.version}</version>
                 <configuration>
-                    <source>11</source>
-                    <target>11</target>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
-                <version>0.0.6</version>
+                <version>${javafx.maven.plugin.version}</version>
                 <executions>
                     <execution>
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>org.anelda.wizston.countdowntimer/org.anelda.wizston.countdowntimer.Main
+                            <mainClass>
+                                org.anelda.wizston.countdowntimer/org.anelda.wizston.countdowntimer.Main
                             </mainClass>
+                            <options>
+                                <option>--add-modules</option>
+                                <option>javafx.controls,javafx.fxml,javafx.graphics</option>
+                            </options>
                         </configuration>
                     </execution>
                 </executions>
             </plugin>
             <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-shade-plugin</artifactId>
-            <version>3.2.4</version>
-            <executions>
-                <execution>
-                    <goals>
-                        <goal>shade</goal>
-                    </goals>
-                    <configuration>
-
-                        <filters>
-                            <filter>
-                                <artifact>junit:junit</artifact>
-                                <includes>
-                                    <include>org.sqlite.JDBC</include>
-                                </includes>
-                            </filter>
-                        </filters>
-                        <shadedArtifactAttached>true</shadedArtifactAttached>
-                        <transformers>
-                            <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
-                                <resource>META-INF/services/org.sqlite.JDBC</resource>
-                            </transformer>
-                            <transformer implementation=
-                                                 "org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                <mainClass>org.anelda.wizston.countdowntimer.Main</mainClass>
-                            </transformer>
-                        </transformers>
-                    </configuration>
-                </execution>
-            </executions>
-        </plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>${maven.shade.plugin.version}</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <filters>
+                                <filter>
+                                    <artifact>junit:junit</artifact>
+                                    <includes>
+                                        <include>org.sqlite.JDBC</include>
+                                    </includes>
+                                </filter>
+                            </filters>
+                            <shadedArtifactAttached>true</shadedArtifactAttached>
+                            <transformers>
+                                <transformer
+                                        implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+                                    <resource>META-INF/services/org.sqlite.JDBC</resource>
+                                </transformer>
+                                <transformer
+                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                    <mainClass>org.anelda.wizston.countdowntimer.Main</mainClass>
+                                </transformer>
+                            </transformers>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
             <plugin>
                 <groupId>io.github.fvarrui</groupId>
                 <artifactId>javapackager</artifactId>
-                <version>1.7.2</version>
+                <version>${javapackager.version}</version>
                 <executions>
                     <execution>
                         <phase>package</phase>
@@ -194,24 +195,13 @@
                             <generateInstaller>true</generateInstaller>
                             <administratorRequired>false</administratorRequired>
                             <platform>windows</platform>
-                            <bundleJre>true</bundleJre>
                             <customizedJre>false</customizedJre>
-<!--                            <additionalResources>javafx.controls,javafx.fxml</additionalResources>-->
-<!--                            <additionalResources>-->
-<!--                                <additionalResource>file path</additionalResource>-->
-<!--                                <additionalResource>folder path</additionalResource>-->
-<!--&lt;!&ndash;                                <additionalResource>...</additionalResource>&ndash;&gt;-->
-<!--                            </additionalResources>-->
-<!--                            <linuxConfig>...</linuxConfig>-->
-<!--                            <macConfig>...</macConfig>-->
                             <winConfig>
-
                                 <companyName>Anelda Inc.</companyName>
                                 <fileVersion>1.0.0.0</fileVersion>
                                 <productVersion>1.0.0.0</productVersion>
                                 <copyright>Anelda Inc</copyright>
                                 <icoFile>src/main/resources/logo.ico</icoFile>
-
                                 <disableDirPage>false</disableDirPage>
                                 <disableFinishedPage>false</disableFinishedPage>
                                 <disableRunAfterInstall>false</disableRunAfterInstall>
@@ -220,7 +210,6 @@
                                 <removeOldLibs>true</removeOldLibs>
                             </winConfig>
                             <macConfig>
-
                                 <!-- general properties -->
                                 <appId>org.anelda.wizston.countdowntimer</appId>
                                 <icnsFile>src/main/resources/logo.ico</icnsFile>
@@ -228,8 +217,6 @@
                                 <generatePkg>true</generatePkg>
                                 <macStartup>UNIVERSAL</macStartup>
                             </macConfig>
-<!--                            <argument>-Bicon=src/main/resources/logo.ico</argument>-->
-<!--                            [...]-->
                         </configuration>
                     </execution>
                 </executions>
